--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,8 @@
 _Panda3D/_MOJE/venv
 _Panda3D/_MOJE/.idea
+
+_Panda3D/universe/meshes
+_Panda3D/universe/textures
+
+_Panda3D/universe2/meshes
+_Panda3D/universe2/textures
